crates/dlin-core/src/render/snapshots/dlin_core__render__column_graph__tests__dot_escapes_special_chars.snap
---
source: crates/dlin-core/src/render/column_graph.rs
assertion_line: 975
expression: "graph_dot(&[report])"
---
digraph column_lineage {
  compound=true;
  node [shape=box, style=filled, fontname="Helvetica"];

  subgraph cluster_0 {
    label="raw\\data";
    style=rounded;

    "n0_0" [label="id\"field\"", fillcolor="#D5D8DC"];
  }
  subgraph cluster_1 {
    label="schema.\"orders\"";
    style=rounded;

    "n1_0" [label="col\\\"name", fillcolor="#AED6F1"];
  }

  "n0_0" -> "n1_0" [label="direct"];
}
