crates/dlin-core/src/render/snapshots/dlin_core__render__column_graph__tests__dot_impact_indirect.snap
---
source: crates/dlin-core/src/render/column_graph.rs
assertion_line: 941
expression: "impact_dot(&[report])"
---
digraph column_lineage {
  compound=true;
  node [shape=box, style=filled, fontname="Helvetica"];

  subgraph cluster_0 {
    label="customers";
    style=rounded;

    "n0_0" [label="customer_order_id", fillcolor="#A9DFBF"];
  }
  subgraph cluster_1 {
    label="stg_orders";
    style=rounded;

    "n1_0" [label="order_id", fillcolor="#D5D8DC"];
  }

  "n1_0" -> "n0_0" [label="expression (via orders)"];
}
