crates/dlin-core/src/render/snapshots/dlin_core__render__column_graph__tests__dot_impact_single.snap
---
source: crates/dlin-core/src/render/column_graph.rs
assertion_line: 924
expression: "impact_dot(&[report])"
---
digraph column_lineage {
  compound=true;
  node [shape=box, style=filled, fontname="Helvetica"];

  subgraph cluster_0 {
    label="orders";
    style=rounded;

    "n0_0" [label="order_id", fillcolor="#AED6F1"];
  }
  subgraph cluster_1 {
    label="stg_orders";
    style=rounded;

    "n1_0" [label="order_id", fillcolor="#D5D8DC"];
  }

  "n1_0" -> "n0_0" [label="direct"];
}
