crates/dlin-core/src/render/snapshots/dlin_core__render__column_graph__tests__impact_plain.snap
---
source: crates/dlin-core/src/render/column_graph.rs
expression: "impact_plain(&[report])"
---
stg_orders.order_id (1 impacted column)
  order_id  →  orders (direct)
