crates/dlin-core/src/render/snapshots/dlin_core__render__column_graph__tests__impact_plain_non_direct_intermediate.snap
---
source: crates/dlin-core/src/render/column_graph.rs
expression: "impact_plain(&[report])"
---
raw.postcode (1 impacted column)
  area  →  mart (direct, via stg_app.area [expression])
